crates/crustcore-tool-macro/tests/ui/unsupported_type.stderr
error: unsupported #[crust_tool] type: only String, the integer types, bool, Option<T>, and Vec<T> of those are supported. An unsupported type is a hard error (never a permissive `any` schema) so the accepted-input surface stays exactly the declared types (invariant 7).
 --> tests/ui/unsupported_type.rs:9:37
  |
9 | fn bad(_host: &mut HostTool, weird: Custom) -> Result<String, ToolError> {
  |                                     ^^^^^^

warning: unused imports: `HostTool` and `ToolError`
 --> tests/ui/unsupported_type.rs:4:25
  |
4 | use crustcore_toolkit::{HostTool, ToolError};
  |                         ^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
